--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,17 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}-latest
-    strategy:
-    fail-fast: false
-    matrix:
-      os: [ubuntu, macos, windows]
-      python: [3.5, 3.6, 3.7, 3.8]
+    # strategy:
+    #   fail-fast: false
+    #   matrix:
+    #     os: [ubuntu, macos, windows]
+    #     python: [3.5, 3.6, 3.7, 3.8]
     steps:
         - uses: actions/checkout@v2
         - name: Set up Python
           uses: actions/setup-python@master
           with:
-            python-version: ${{ matrix.python }}
+            python-version: ${{ matrix.3.7 }}
         
         - name: Release Platformio
           run: |
