--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         - name: Set up Python
           uses: actions/setup-python@master
           with:
-            python-version: ${{ matrix.3.7 }}
+            python-version: 3.7
         
         - name: Release Platformio
           run: |
