--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: windows-latest
+    # runs-on: ${{ matrix.os }}-latest
     # strategy:
     #   fail-fast: false
     #   matrix:
